polychem/src/polymerizer/snapshots/polychem__polymerizer__polymer_chemistry__tests__parse_empty_modifications.snap
---
source: polychem/src/polymerizer/polymer_chemistry.rs
expression: modifications.unwrap()
---
{}
