polychem/src/polymerizer/snapshots/polychem__polymerizer__polymer_chemistry__tests__parse_muropeptide_bonds.snap
---
source: polychem/src/polymerizer/polymer_chemistry.rs
expression: bonds.unwrap()
---
{
  "Glycosidic": BondDescription(
    from: Target(
      group: "Hydroxyl",
      location: Some("Reducing End"),
      residue: None,
    ),
    to: Target(
      group: "Hydroxyl",
      location: Some("Nonreducing End"),
      residue: None,
    ),
    lost: ChemicalComposition(
      chemical_formula: [],
      particle_offset: None,
    ),
  ),
  "Stem": BondDescription(
    from: Target(
      group: "Carboxyl",
      location: Some("Lactyl Ether"),
      residue: Some("N-Acetylmuramic Acid"),
    ),
    to: Target(
      group: "Amino",
      location: Some("N-Terminal"),
      residue: None,
    ),
    lost: ChemicalComposition(
      chemical_formula: [
        (Element(
          symbol: "H",
          name: "Hydrogen",
          mass_number: None,
          isotopes: {
            1: Isotope(
              relative_mass: "1.00782503223",
              abundance: Some("0.999885"),
            ),
            2: Isotope(
              relative_mass: "2.01410177812",
              abundance: Some("0.000115"),
            ),
            3: Isotope(
              relative_mass: "3.0160492779",
              abundance: None,
            ),
          },
        ), 2),
        (Element(
          symbol: "O",
          name: "Oxygen",
          mass_number: None,
          isotopes: {
            16: Isotope(
              relative_mass: "15.99491461957",
              abundance: Some("0.99757"),
            ),
            17: Isotope(
              relative_mass: "16.99913175650",
              abundance: Some("0.00038"),
            ),
            18: Isotope(
              relative_mass: "17.99915961286",
              abundance: Some("0.00205"),
            ),
          },
        ), 1),
      ],
      particle_offset: None,
    ),
  ),
}
