polychem/src/polymerizer/snapshots/polychem__polymerizer__polymer_chemistry__tests__parse_null_gained_modification.snap
---
source: polychem/src/polymerizer/polymer_chemistry.rs
description: modifications
expression: out
---
  × error parsing KDL

Error:   × expected string scalar, found null
   ╭─[test:4:12]
 3 │     lost "H"
 4 │     gained null
   ·            ──┬─
   ·              ╰── unexpected null
 5 │ }
   ╰────

